// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewContainer render content render once; should call details view opened 1`] = `
<DocumentFragment>
  <mock-narrowmodedetector
    childrenprops="[object Object]"
    deps="[object Object]"
    isnarrowmodeenabled="true"
  />
</DocumentFragment>
`;

exports[`DetailsViewContainer render content render once; should call details view opened: NarrowModeDetector props 1`] = `
{
  "Component": [Function],
  "childrenProps": {
    "deps": {
      "detailsViewActionMessageCreator": [typemoq mock object],
      "storesHub": [typemoq mock object],
    },
    "isSideNavOpen": false,
    "setSideNavOpen": [Function],
    "storeState": {
      "tabStoreData": {
        "isClosed": false,
        "isOriginChanged": false,
      },
      "visualizationStoreData": {
        "selectedDetailsViewPivot": -1,
      },
    },
  },
  "deps": {
    "detailsViewActionMessageCreator": [typemoq mock object],
    "storesHub": [typemoq mock object],
  },
  "isNarrowModeEnabled": true,
}
`;

exports[`DetailsViewContainer render content render once; should call details view opened: NoContentAvailable props 1`] = `undefined`;

exports[`DetailsViewContainer render content render once; should call details view opened: StyledSpinnerBase props 1`] = `undefined`;

exports[`DetailsViewContainer render content show NoContentAvailable when stores are not loaded 1`] = `
<DocumentFragment>
  <mock-narrowmodedetector
    childrenprops="[object Object]"
    deps="[object Object]"
    isnarrowmodeenabled="false"
  />
  <mock-nocontentavailable />
</DocumentFragment>
`;

exports[`DetailsViewContainer render content show NoContentAvailable when stores are not loaded: NarrowModeDetector props 1`] = `
{
  "Component": [Function],
  "childrenProps": {
    "deps": {
      "storesHub": [typemoq mock object],
    },
  },
  "deps": {
    "storesHub": [typemoq mock object],
  },
  "isNarrowModeEnabled": false,
}
`;

exports[`DetailsViewContainer render content show NoContentAvailable when stores are not loaded: NoContentAvailable props 1`] = `{}`;

exports[`DetailsViewContainer render content show NoContentAvailable when stores are not loaded: StyledSpinnerBase props 1`] = `undefined`;

exports[`DetailsViewContainer render content show NoContentAvailable when target tab is closed 1`] = `
<DocumentFragment>
  <mock-narrowmodedetector
    childrenprops="[object Object]"
    deps="[object Object]"
    isnarrowmodeenabled="true"
  />
  <mock-nocontentavailable />
</DocumentFragment>
`;

exports[`DetailsViewContainer render content show NoContentAvailable when target tab is closed: NarrowModeDetector props 1`] = `
{
  "Component": [Function],
  "childrenProps": {
    "deps": {
      "storesHub": [typemoq mock object],
    },
  },
  "deps": {
    "storesHub": [typemoq mock object],
  },
  "isNarrowModeEnabled": true,
}
`;

exports[`DetailsViewContainer render content show NoContentAvailable when target tab is closed: NoContentAvailable props 1`] = `{}`;

exports[`DetailsViewContainer render content show NoContentAvailable when target tab is closed: StyledSpinnerBase props 1`] = `undefined`;

exports[`DetailsViewContainer render content shows NoContentAvailable when target page is changed and no permissions granted 1`] = `
<DocumentFragment>
  <mock-narrowmodedetector
    childrenprops="[object Object]"
    deps="[object Object]"
    isnarrowmodeenabled="true"
  />
  <mock-nocontentavailable />
</DocumentFragment>
`;

exports[`DetailsViewContainer render content shows NoContentAvailable when target page is changed and no permissions granted: NarrowModeDetector props 1`] = `
{
  "Component": [Function],
  "childrenProps": {
    "deps": {
      "storesHub": [typemoq mock object],
    },
  },
  "deps": {
    "storesHub": [typemoq mock object],
  },
  "isNarrowModeEnabled": true,
}
`;

exports[`DetailsViewContainer render content shows NoContentAvailable when target page is changed and no permissions granted: NoContentAvailable props 1`] = `{}`;

exports[`DetailsViewContainer render content shows NoContentAvailable when target page is changed and no permissions granted: StyledSpinnerBase props 1`] = `undefined`;

exports[`DetailsViewContainer render renders spinner when stores not ready 1`] = `
<DocumentFragment>
  <mock-styledspinnerbase
    classname="details-view-spinner"
    label="Loading..."
    size="3"
  />
</DocumentFragment>
`;

exports[`DetailsViewContainer render renders spinner when stores not ready: NarrowModeDetector props 1`] = `undefined`;

exports[`DetailsViewContainer render renders spinner when stores not ready: NoContentAvailable props 1`] = `undefined`;

exports[`DetailsViewContainer render renders spinner when stores not ready: StyledSpinnerBase props 1`] = `
{
  "className": "details-view-spinner",
  "label": "Loading...",
  "size": 3,
}
`;
